--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@twa-dev/sdk": "^6.7.1",
     "@vitejs/plugin-basic-ssl": "^1.0.1",
     "@vkruglikov/react-telegram-web-app": "^2.1.9",
+    "framer-motion": "^11.11.8",
+    "motion-number": "^0.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.2",
